ss
test.cpp:1:2: error: invalid preprocessing directive #inclu
 #inclu
  ^
